Enhance Privacy and Terms pages with detailed content; implement Google Analytics tracking and event handling

--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "GoogleAnalytics": {
+    "MeasurementId": "G-5Z6Y93FZC5"
+  }
 }
