--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -43,21 +43,17 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha      
-            
+            type=sha
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push container
-        run: |
-          # Create tag arguments for Docker
-          TAGS=""
-          while IFS= read -r tag; do
-            TAGS="$TAGS -t $tag"
-          done <<< "${{ steps.meta.outputs.tags }}"
-          
-          dotnet publish Web/Web.csproj \
-            --os linux \
-            --arch x64 \
-            -c Release \
-            --self-contained \
-            /p:PublishProfile=DefaultContainer \
-            /p:ContainerRepository=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} \
-            /p:ContainerBuildArgs="$TAGS"
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
