--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -46,8 +46,8 @@ jobs:
             type=sha
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
+        uses: docker/setup-buildx-action@v3      
+				
       - name: Build and push container
         uses: docker/build-push-action@v5
         with:
@@ -56,4 +56,20 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-to: type=gha,mode=max      # Deploy to Azure Container Apps
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.CTJWEB_AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.CTJWEB_AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.CTJWEB_AZURE_SUBSCRIPTION_ID }}
+      
+      - name: Deploy to Azure Container App
+        uses: azure/CLI@v2
+        with:
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az containerapp update \
+              --name ctj-web \
+              --resource-group CopilotThatJawn \
+              --image ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
