--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -46,8 +46,8 @@ jobs:
             type=sha
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3      
-				
+        uses: docker/setup-buildx-action@v3
+
       - name: Build and push container
         uses: docker/build-push-action@v5
         with:
@@ -56,7 +56,9 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max      # Deploy to Azure Container Apps
+          cache-to: type=gha,mode=max
+
+      # Deploy to Azure Container Apps
       - name: Azure Login
         uses: azure/login@v2
         with:
