--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      id-token: write
       packages: write
 
     steps:
@@ -65,6 +66,7 @@ jobs:
           client-id: ${{ secrets.CTJWEB_AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.CTJWEB_AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.CTJWEB_AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
       
       - name: Deploy to Azure Container App
         uses: azure/CLI@v2
