--- a/.github/workflows/container-build.yml
+++ b/.github/workflows/container-build.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
+env:  
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: ${{ github.repository_owner }}/copilotthatjawn
 
 jobs:
   build-and-push:
