Preparing to deploy

--- a/AppHost/appsettings.json
+++ b/AppHost/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Parameters": {
+    "customDomain": "copilotthatjawn.com",
+    "certificateName": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
