--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.AppContainers" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.0" />
   </ItemGroup>
 
