feat: implement output caching for various endpoints and introduce BasePageModel for cache management

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -12,9 +12,9 @@
     <PackageReference Include="Markdig" Version="0.37.0" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
