feat: configure custom domains and certificates for Azure Container App

--- a/AppHost/appsettings.json
+++ b/AppHost/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Parameters": {
-    "customDomain": "copilotthatjawn.com",
-    "certificateName": ""
+    "apexDomain": "copilotthatjawn.com",
+		"wwwDomain": "www.copilotthatjawn.com",
+    "certificateName": "copilotthatjawn.com-cae-uanp-250608192822",
+		"wwwCertificateName": "www.copilotthatjawn.com-cae-uanp-250608193349"
   },
   "Logging": {
     "LogLevel": {
