fix: remove quotes from custom domain names and certificate IDs in web template

--- a/AppHost/infra/web.tmpl.yaml
+++ b/AppHost/infra/web.tmpl.yaml
@@ -18,12 +18,12 @@ properties:
       transport: http
       allowInsecure: false
       customDomains:
-        - name: 'copilotthatjawn.com'
-          bindingType: 'SniEnabled'
-          certificateId: '/subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/copilotthatjawn-com'
-        - name: 'www.copilotthatjawn.com'
-          bindingType: 'SniEnabled'
-          certificateId: '/subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/www-copilotthatjawn-com'
+        - name: copilotthatjawn.com
+          bindingType: SniEnabled
+          certificateId: /subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/copilotthatjawn-com
+        - name: www.copilotthatjawn.com
+          bindingType: SniEnabled
+          certificateId: /subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/www-copilotthatjawn-com
     registries:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
