Add image processing and visualization features
- Implemented a script to generate test images for AI productivity trends, tools usage, and time savings.
- Added new markdown documentation for visualizing data with GitHub Copilot.
- Enhanced ContentLoader to process and upload images to Azure Blob Storage.
- Created ImageUploadHelper for handling image uploads and metadata management.
- Introduced IImageService interface and ImageService implementation for image management.
- Added custom Markdown extension for rewriting image URLs in content.
- Updated various models and services to support image handling and metadata storage.
- Included necessary NuGet packages for Azure Blob Storage and ImageSharp.

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -8,8 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.3.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageReference Include="LigerShark.WebOptimizer.Core" Version="3.0.436" />
     <PackageReference Include="Markdig" Version="0.37.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
   <ItemGroup>
