--- a/AppHost/AppHost.csproj
+++ b/AppHost/AppHost.csproj
@@ -9,11 +9,11 @@
     <Nullable>enable</Nullable>
     <UserSecretsId>21fabb30-ac7d-4818-8766-92672e7b369a</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Azure.AppContainers" Version="9.3.0" />
     <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.3.0" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.3.0" />
   </ItemGroup>
 
   <ItemGroup>
