--- a/AppHost/infra/web.tmpl.yaml
+++ b/AppHost/infra/web.tmpl.yaml
@@ -17,21 +17,14 @@ properties:
       targetPort: {{ targetPortOrDefault 8080 }}
       transport: http
       allowInsecure: false
-      customDomains:
-        - name: copilotthatjawn.com
-          bindingType: SniEnabled
-          certificateId: /subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/copilotthatjawn.com-cae-uanp-250608192822
-        - name: www.copilotthatjawn.com
-          bindingType: SniEnabled
-          certificateId: /subscriptions/09153f92-3cbc-46f1-8872-1683749eda4b/resourceGroups/rg-copilotthatjawn/providers/Microsoft.App/managedEnvironments/cae-uanpydy4xv63a/managedCertificates/www.copilotthatjawn.com-cae-uanp-250608193349
     registries:
       - server: {{ .Env.AZURE_CONTAINER_REGISTRY_ENDPOINT }}
         identity: {{ .Env.AZURE_CONTAINER_REGISTRY_MANAGED_IDENTITY_ID }}
     secrets:
+      - name: connectionstrings--redis
+        value: '{{ securedParameter "redis" }}'
       - name: connectionstrings--tables
         value: '{{ .Env.AZURE_STORAGE_TABLEENDPOINT }}'
-      - name: cacherefresh--apikey
-        value: '{{ .Env.CACHE_REFRESH_API_KEY }}'
   template:
     containers:
       - image: {{ .Image }}
@@ -49,10 +42,10 @@ properties:
             value: "true"
           - name: OTEL_DOTNET_EXPERIMENTAL_OTLP_RETRY
             value: in_memory
+          - name: ConnectionStrings__redis
+            secretRef: connectionstrings--redis
           - name: ConnectionStrings__tables
             secretRef: connectionstrings--tables
-          - name: CacheRefresh__ApiKey
-            secretRef: cacherefresh--apikey
     scale:
       minReplicas: 1
 tags:
