fix: remove unnecessary --no-build option from unit test command

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -47,7 +47,7 @@ jobs:
             9.x.x
 
       - name: Run Unit Tests
-        run: dotnet test --no-build --verbosity normal
+        run: dotnet test --verbosity normal
         if: always()
 
       - name: Log in with Azure (Federated Credentials)
