--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>  <ItemGroup>
     <PackageReference Include="Aspire.Azure.Data.Tables" Version="9.3.0" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.24.1" />
+    <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.3.0" />
     <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.3.1" />
     <PackageReference Include="Aspire.StackExchange.Redis.OutputCaching" Version="9.3.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
